解决一部分包移动的问题，发现有很多是相互引用的，不深入业务难以拆分开。想到一些公共的可以放到网关，然后就创建了网关服务

--- a/ps-common/pom.xml
+++ b/ps-common/pom.xml
@@ -225,6 +225,12 @@
             <artifactId>dashscope-sdk-java</artifactId>
             <version>2.16.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+<!--            <scope>provided</scope>-->
+        </dependency>
     </dependencies>
 
 
