--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ps-api</module>
         <module>ps-article</module>
         <module>ps-comment</module>
+        <module>ps-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
